# Ai_Video_Violence_Detection

./: .gitignore  LICENSE  README.md  pyproject.toml
.copilot/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  content_improvement.md  feature_request.md
.github/prompts/: smart-prompt-framework-guide.md  task-prompt.md
.github/workflows/: ci-frontend.yml  ci-python.yml  validate-postman.yml
.github/workitems/: 01_workitems_index.md  phase-01-backend-foundation.md  phase-02-database-setup.md  phase-03-ml-preprocessing.md  phase-04-ml-training.md  phase-05-ml-inference.md  phase-06-genai-integration.md  phase-07-api-core-endpoints.md  phase-08-prompt-engineering.md  phase-09-api-complaint-history.md  phase-10-api-admin-endpoints.md  phase-11-authentication-jwt.md  phase-12-authorization-rbac.md  phase-13-testing-ml-pipeline.md  phase-14-testing-api-integration.md  phase-15-ci-python-workflow.md  phase-16-ci-quality-gates.md  phase-17-docs-setup-guide.md  phase-18-docs-api-reference.md  phase-19-frontend-react-scaffold.md  phase-20-frontend-complaint-form.md  phase-21-frontend-results-display.md  phase-22-deep-learning-upgrade.md  phase-23-auto-response-drafting.md
docs/: 01_abstract.md  02_repository_structure.md  03_setup.md  04_usage.md
docs/diagrams/: README.md
docs/reports/: 01_final-report.md  02_viva-faqs.md
docs/reviews/: 13mar2026_SecondReview.md  13mar2026_SecondReview.pptx  14mar2026_Workitems_Prompts_DeepDive.md  30jan2026_InitialReview.md  31mar2026_FinalReview.md  InitialReview_outline.md
infra/: .env.example  docker-compose.yml
infra/database/: README.md  queries-for-daily-user.sql  schema.sql
src/ai-video-violence-detection/: PKG-INFO  SOURCES.txt
src/ai_video_violence_detectionr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backend/: .env.example  README.md
src/backend/app/: config.py  db.py  deps.py  limiter.py  main.py
src/backend/app/ml/: __init__.py  inference.py  preprocessing.py  train.py
src/backend/app/models/: auth.py  health.py  video.py
src/backend/app/routers/: admin.py  auth.py  detections.py  health.py  videos.py
src/backend/app/services/: admin_service.py  audit_service.py  auth_service.py  explanation_service.py  video_service.py
src/backend/app/utils/: audit_helpers.py  jwt_handler.py  password.py  request_helpers.py  validators.py
src/backend/models/: violence_model.keras
src/backend/tests/: conftest.py  helpers.py  test_admin_api.py  test_auth.py  test_detections_api.py  test_explanation_service.py  test_health.py  test_main.py  test_ml_inference.py  test_ml_preprocessing.py  test_ratelimit.py  test_utils_validators.py  test_videos_api.py
src/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/api/: client.test.ts  client.ts
src/frontend/src/components/: AdminRoute.test.tsx  AdminRoute.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Layout.tsx  PrivateRoute.test.tsx  PrivateRoute.tsx  SkipNavigation.tsx  VideoUpload.tsx
src/frontend/src/pages/: AdminDashboard.tsx  DetectionResults.tsx  History.tsx  LandingPage.tsx  Login.tsx  Register.tsx  VideoAnalysis.tsx
src/frontend/src/store/: authSlice.test.ts  authSlice.ts  index.ts  videosSlice.test.ts  videosSlice.ts
src/frontend/src/types/: index.ts
