[project]
name = "ai-video-violence-detection"
version = "0.1.0"
description = "AI-powered video surveillance system that detects violent activities using CNN-LSTM deep learning and generates human-readable incident explanations using Generative AI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Viswanatha Swamy P K"}
]
keywords = [
    "computer-vision",
    "violence-detection",
    "cnn-lstm",
    "deep-learning",
    "video-analysis",
    "genai",
    "surveillance",
    "fastapi",
    "react",
    "postgresql"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Security",
]

# Backend (FastAPI) and shared deps below. Install from repo root: uv sync (or uv sync --extra dev)
dependencies = [
    "fastapi>=0.110.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "psycopg2-binary>=2.9.10",
    "PyYAML>=6.0.2",
    "google-genai>=1.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "tensorflow-cpu>=2.21.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | \.coverage
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "*.pyc", "node_modules/*"]

[tool.pytest.ini_options]
testpaths = ["src/backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
max-complexity = 10
exclude = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "__pycache__",
    ".pytest_cache",
]
